tests/fixtures/invalid/pow_dict_list_bool.py
# Cannot call pow() with Dict[str, int], List[int], Bool
x = pow({"a": 1}, [1, 2, 3], True)
